<resources>
    <string name="app_name" translatable="false">DAFT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_category">CategoryActivity</string>

    <string name="navigation_open">Navigation Drawer Opened </string>
    <string name="navigation_closed">Navigation Drawer Closed </string>
    <string name="title_activity_settings">Settings</string>

    <string name="NecessitiesPercentage">Necessities Percentage</string>
    <string name="SavingsPercentage">Savings Percentage</string>
    <string name="LuxuriesPercentage">Luxuries Percentage</string>
    <string name="distributions">Budget Distributions</string>
    <string name="period">Budget Period</string>
    <string name="income">My Income</string>
    <string name="overview">Overview</string>
    <string name="title_activity_sub_category">SubCategory</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="luxuries">Luxuries</string>
    <string name="necessities">Necessities</string>
    <string name="savings">Savings</string>
    <string name="add_category">Add Category</string>
    <string name="new_sub_category">New Sub-Category</string>
    <string name="parent_category">Parent Category</string>
    <string name="sub_category_name">Sub-Category Name:</string>
    <string name="budget_amount">Budget Amount</string>
    <string name="next">NEXT</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="Budget_Header">Budget:</string>
    <string name="Left_To_Spend_Header">Left to Spend:</string>
    <string name="budget">Budget:</string>
    <string name="leftToSpend">Left To Spend: </string>
    <string name="category">"Category: "</string>
    <string name="prev">PREV</string>
    <string name="save">SAVE</string>
    <string name="you_have">You have</string>
    <string name="in_your_bank_accounts">in your bank accounts.</string>
    <string name="my_categories">My Categories</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="Transaction_Ref">"Transaction Ref: "</string>
    <string name="bank_account">"Bank Account: "</string>
    <string name="transaction_amount">"Transaction Amount: "</string>
    <string name="transaction_date">"Transaction Date: "</string>
    <string name="my_accounts">My Accounts</string>
    <string name="new_sub_cat_toast_msg">Please fill in all of the fields above</string>
    <string name="income_amount">Income Amount</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

</resources>
