<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:background="@color/green">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item1"
            android:title="@string/my_accounts"
            android:icon="@drawable/ic_credit_card"/>
        <item
            android:id="@+id/navigation_item2"
            android:title="@string/my_categories"
            android:icon="@drawable/ic_assignment"/>
        <item
            android:id="@+id/navigation_item3"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/navigation_item4"
            android:title="@string/help"
            android:icon="@drawable/ic_help_outline"/>
    </group>

</menu>