<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.honours.daft.SettingsActivity$DistributionsFragment"
        app:icon="@drawable/ic_pie_chart_black_24dp"
        app:key="distributions_header"
        app:title="@string/distributions" />

    <Preference
        app:fragment="com.honours.daft.SettingsActivity$PeriodFragment"
        app:icon="@drawable/ic_today"
        app:key="period_header"
        app:title="@string/period" />

    <Preference
        app:fragment="com.honours.daft.SettingsActivity$IncomeFragment"
        app:icon="@drawable/ic_monetization_on_black_24dp"
        app:key="income_header"
        app:title="@string/income" />

</PreferenceScreen>
