<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="411dp"
        android:layout_height="151dp"
        android:layout_margin="4dp">

        <ProgressBar
            android:id="@+id/progressBarSavings"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:indeterminate="false"
            android:layout_width="156dp"
            android:layout_height="139dp"
            android:layout_marginStart="197dp"
            android:layout_marginLeft="197dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="51dp"
            android:layout_marginRight="51dp"
            android:layout_marginBottom="0dp"
            android:progress="50"
            android:progressDrawable="@drawable/circle1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBarNecessities"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:indeterminate="false"
            android:layout_width="156dp"
            android:layout_height="139dp"
            android:layout_marginStart="197dp"
            android:layout_marginLeft="197dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="51dp"
            android:layout_marginRight="51dp"
            android:layout_marginBottom="0dp"
            android:progress="50"
            android:progressDrawable="@drawable/circle2"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBarLuxuries"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:indeterminate="false"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="197dp"
            android:layout_marginLeft="197dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="51dp"
            android:layout_marginRight="51dp"
            android:progress="50"
            android:progressDrawable="@drawable/circle3"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="42dp"
            android:layout_height="39dp"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:layout_marginBottom="52dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_warning" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="174dp"
            android:layout_height="156dp"
            android:baselineAligned="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/parentCatName"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:padding="2dp"
                android:text="@string/category"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.436"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.288" />

            <TextView
                android:id="@+id/budgetValueCat"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="36dp"
                android:autoSizeTextType="uniform"

                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@string/Budget_Header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.326" />

            <TextView
                android:id="@+id/leftToSpendCat"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:autoSizeTextType="uniform"
                android:text="@string/Left_To_Spend_Header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.619" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>